- For building the library-wrapper generator used by `scorep-libwrap-init`,
  use CC and CXX provided by `llvm-config` or via `(CC|CXX)_FOR_BUILD_LIBWRAP`.
  Additionally, allow for individual flags via
  `((CPP|C|CXX|LD)FLAGS|LIBS)_FOR_BUILD_LIBWRAP`. The latter supersedes the
  previous `LIBCLANG_((CPP|CXX|LD)FLAGS|LIBS)`.
- Support for Intel MIC platforms is deprecated.

Bugfixes:

- MPI request management now uses internal Score-P memory management.
  However, a measurement will now have increased memory requirements.
  Please be aware of this.
- Add missing Fortran wrappers to the MPI adapter for
  - `MPI_Alloc_mem`
  - `MPI_Free_mem`
  - `MPI_Win_shared_query`
- Non-blocking MPI I/O events now produce the correct `IoOperationTest`
  event instead of the erroneous `MpiRequestTested` event for an
  unsuccessful MPI_Test on the request.
- Events for unsuccessful MPI_Test on a request are now consistently triggered
  by the `xreqtest` group.
- Fix a crash in the MPI adapter when no active requests are given to MPI_Waitany.

------------------- Released version 7.1 -----------------------------

Bug fixes:

- Properly handle `nvcc` compiler flags beginning with -o that do
  not set output files.
- Ensure that Score-P's compiler wrappers are not called recursively. This was
  possible as a result of  `scorep-nvcc` using a `scorep-*` host
  compiler wrapper.
- scorep-score: fix event size estimation of I/O sync events.
- Allow for OpenMP tasks outside of an OpenMP parallel region.
- Fix Fortran wrappers for MPI_Alltoallw and MPI_Ialltoallw when using
  MPI_IN_PLACE. This resolves a rare crash when passing legal NULL
  array arguments to these functions.
- Communication completed in MPI_Request_get_status is now correctly
  recorded.

------------------- Released version 7.0 -----------------------------

Features and improvements:

- Add support for recording calls to OpenCL 2.1/2.2 functions.
- Add support for recording events from the Kokkos tools interface.